2013-04-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/fortran.spad.pamphlet,
	src/algebra/ffcat.spad.pamphlet: Minor cleanup.

2013-04-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/newfort.boot: Fix another fortran output problem.

2013-04-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-syscmd.boot, src/lisp/fricas-lisp.lisp,
	src/lisp/fricas-package.lisp: Fix ')undo'.

2013-04-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/newfort.boot: Fix output of exponents.

2013-03-31  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/intef.spad.pamphlet
	src/interp/scan.boot, src/interp/parsing.lisp,
	src/interp/scwrap2.boot: Small cleanups.

2013-03-30  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/combfunc.spad.pamphlet,
	src/algebra/fspace.spad.pamphlet: Use fresh dummies
	for formal diffs.

2013-03-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/macros.lisp: expand-tabs(): Really
	expand all tabs.

2013-03-19  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/s-parser.boot: Small Spad syntax change.

2013-03-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/eigen.spad.pamphlet: Delete useless code.

2013-02-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/indexedp.spad.pamphlet.
	src/algebra/poly.spad.pamphlet: Only request Comparable
	from the second argument to FreeModule.

2013-01-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/s-parser.boot, src/interp/macros.lisp,
	src/interp/property.lisp, src/interp/postpar.boot:
	Minor cleanups.

2012-12-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* *: More renames of 'Axiom' to 'FriCAS'.

2012-12-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/scripts/norm-out:  Clean up.

2012-11-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/trace.boot:  Fix untrace.

2012-11-08  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
