@@ -1,5 +1,10 @@
 2013-04-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/lib/cfuns-c.c, src/interp/util.lisp: Fix build with
+	clisp.
+
+2013-04-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/algebra/fortran.spad.pamphlet,
 	src/algebra/ffcat.spad.pamphlet: Minor cleanup.
 
